--- a/ProAgil.API/ProAgil.API.csproj
+++ b/ProAgil.API/ProAgil.API.csproj
@@ -3,10 +3,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.2"/>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.2"/>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="3.1.2"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.2"/>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ProAgil.Domain\ProAgil.Domain.csproj"/>
+    <ProjectReference Include="..\ProAgil.Repository\ProAgil.Repository.csproj"/>
   </ItemGroup>
 </Project>
