--- a/ProAgil.API/appsettings.json
+++ b/ProAgil.API/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "server=localhost;userid=root;password=1234342356;database=aspnetcoreangulardb"
+    "DefaultConnection": "server=localhost;userid=root;password=123456;database=aspnetcoreangulardb"
   }
 }
